<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/podaci_o_korisniku"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_attach_money_black24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PrikazFinansijeStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ime" />

        <TextView
            android:id="@+id/imeProfilFragmentTv"
            style="@style/PrikazFinansijeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PrikazFinansijeStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/prezime" />

        <TextView
            android:id="@+id/prezimeProfilFragmentTv"
            style="@style/PrikazFinansijeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PrikazFinansijeStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/banka" />

        <TextView
            android:id="@+id/bankaProfilFragmentTv"
            style="@style/PrikazFinansijeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/odjaviBtnProfilFragment"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="40dp"
            android:text="@string/odjava" />

        <Button
            android:id="@+id/izmeniBtnProfilFragment"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginStart="80dp"
            android:text="@string/izmeni" />


    </LinearLayout>

</LinearLayout>