<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/izmena_finansije"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_attach_money_black24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PrikazFinansijeStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/naslov" />

        <EditText
            android:id="@+id/naslovEdIzmenaFinansijaActivity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:hint="@string/naslov" />>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PrikazFinansijeStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/kolicina" />

        <EditText
            android:id="@+id/kolicinaEdIzmenaFinansijaActivity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36sp"
            android:layout_marginEnd="200dp"
            android:hint="@string/_100"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10sp"
        android:text="@string/opis"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/opisIzmeniFinansijeActivity"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_border"
        android:gravity="top"
        android:hint="Neki opis"
        android:inputType="text|textMultiLine"
        android:padding="10dp"
        android:visibility="visible" />


    <Chronometer
        android:id="@+id/chronometerIzmenaFinansijeFragment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/audioIvIzmeniFinanseijFragment"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_mic_24"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/audioRecordingIzmeniFinansijeFragment"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_mic_24"
        android:visibility="gone"
        app:tint="@android:color/holo_red_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/odustaniBtnIzmaneFinansijeActivity"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="50dp"
            android:text="@string/odustani" />

        <Button
            android:id="@+id/izmeniBtnIzmaneFinansijeActivity"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginStart="60dp"
            android:text="@string/izmeni" />


    </LinearLayout>


</LinearLayout>