<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/detalji_finansije"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_attach_money_black24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PrikazFinansijeStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/naslov" />

        <TextView
            android:id="@+id/naslovEdPrikazFinansijaActivity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:hint="@string/naslov"
            android:textSize="20sp" />>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <TextView
            style="@style/PrikazFinansijeStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/kolicina" />

        <TextView
            android:id="@+id/kolicinaEdPrikazFinansijaActivity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36sp"
            android:layout_marginEnd="200dp"
            android:hint="@string/_100"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10sp"
        android:text="@string/opis"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/opisPrikazFinansijeActivityEt"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_border"
        android:gravity="top"
        android:inputType="text|textMultiLine"
        android:padding="10dp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/seekBarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:padding="12dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/player_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textStyle="bold"
            android:tint="@color/black" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/player_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textStyle="bold"
            android:tint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playbuttonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/bt_rew"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_rewind"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/bt_play"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/ic_play"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/bt_pause"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:src="@drawable/ic_pause"
            android:visibility="gone"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/bt_fw"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_forward"
            app:tint="@color/black" />

    </LinearLayout>

</LinearLayout>